vlib/v/checker/tests/map_repeated_float_key_err.out
vlib/v/checker/tests/map_repeated_float_key_err.vv:10:3: error: duplicate key "1.e-06" in map literal
    8 |         0.000001: 'small-1'
    9 |         0.00001: 'small-2',
   10 |         1.e-06:   'small-3',
      |         ~~~~~~
   11 |         0.00001: 'small-4'
   12 |     }
vlib/v/checker/tests/map_repeated_float_key_err.vv:11:3: error: duplicate key "0.00001" in map literal
    9 |         0.00001: 'small-2',
   10 |         1.e-06:   'small-3',
   11 |         0.00001: 'small-4'
      |         ~~~~~~~
   12 |     }
   13 |     dump(m64)
